# errorck

./: .clang-format  .gitignore  AGENTS.md  CHECKS.md  CMakeLists.txt  README.md  main.cpp
scripts/: list_calls.py  run_errorck_analysis.py
tests/: CMakeLists.txt  test_runner.cpp
tests/all_non_void/: expected.jsonl  main.c
tests/all_non_void_member_function_pointer/: expected.jsonl  main.c
tests/all_non_void_no_functions/: errorck_args.txt  expected.jsonl  main.c
tests/duplicate_calls/: dup.inc  expected.jsonl  main.c
tests/duplicate_calls_multi_tu/: expected.jsonl  main.c  other.c  shared.inc  sources.txt
tests/errno_assigned_and_passed_to_handler/: expected.jsonl  main.c
tests/errno_branched_no_catchall/: expected.jsonl  main.c
tests/errno_branched_with_catchall/: expected.jsonl  main.c
tests/errno_logged_not_handled/: expected.jsonl
tests/errno_propagated/: expected.jsonl  functions.json  main.c
tests/errno_used_other/: expected.jsonl  main.c
tests/exclude_notable_functions/: errorck_args.txt  expected.jsonl  functions.json  main.c
tests/fail_errno_assigned_and_passed_to_handler/: expected.jsonl  functions.json
tests/fail_errno_assigned_not_read/: expected.jsonl  functions.json  main.c
tests/fail_errno_ignored_no_check/: expected.jsonl  main.c
tests/fail_errno_logged_not_handled/: functions.json  main.c
tests/fail_return_value_assigned_and_passed_to_handler_function/: expected.jsonl  functions.json  main.c
tests/fail_return_value_assigned_not_read/: expected.jsonl  main.c
tests/fail_return_value_branched_no_catchall/: expected.jsonl
tests/fail_return_value_branched_with_catchall/: functions.json  main.c
tests/fail_return_value_ignored_statement/: expected.jsonl  main.c
tests/fail_return_value_passed_to_handler/: expected.jsonl  main.c
tests/ignored_basic/: expected.jsonl  main.c
tests/list_non_void_calls/: expected.jsonl  main.c
tests/list_non_void_indirect_calls/: errorck_args.txt  expected.jsonl  main.c
tests/pass_errno_branch_unrelated/: functions.json  main.c
tests/pass_errno_checked_next_statement/: functions.json
tests/pass_errno_logged_then_handled/: main.c
tests/pass_return_value_branch_unrelated/: main.c
tests/pass_return_value_checked_branch/: main.c
tests/pass_return_value_logged_then_handled/: functions.json  main.c
tests/return_value_assigned_and_passed_to_handler_function/: expected.jsonl  main.c
tests/return_value_assigned_not_read/: functions.json
tests/return_value_branched_with_catchall/: expected.jsonl
tests/return_value_cast_to_void/: expected.jsonl  main.c
tests/return_value_logged_not_handled/: expected.jsonl  main.c
tests/return_value_member_function_pointer_ignored/: functions.json
tests/return_value_passed_to_handler/: expected.jsonl  main.c
tests/return_value_propagated/: expected.jsonl  main.c
tests/return_value_used_other/: expected.jsonl  functions.json  main.c
